Add EndWhileTest